# lamina.js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json  rolldown.config.js  tsconfig.json
bindings/: wasm_bindings.cpp
docs/: API_REFERENCE.md  BUILD.md  README.md
examples/: basic.js  builtin.js  demo.js  elegant.js  test-buffer.js  test.js  test.lm
src/: api.ts  cli.ts  index.ts  interpreter.ts  lamina-wasm.d.ts  math.ts  types.d.ts  types.ts
